# MusicPlayer

./: .gitignore  .pre-commit-config.yaml  .python-version  player.spec  pyproject.toml  pyrightconfig.json
dlls/: player.py.pclprof
music_downloader/: common.py  constants.py  downloader.py  music.py  player.py  queue_gui.py  spotlistr-exported-playlist.csv  utils.py  vlc_core.py
music_downloader/playlists/: playlist1.json  playlist4.json
music_downloader/playlists/Japanese/: playlist2.json
music_downloader/src/music_downloader/: album.py  common.py  constants.py  music.py  player.py  playlist.py  queue_gui.py  toolbar.py  vlc_core.py
music_player/playlists/: Fall Out ^1.json  Liked Songs.json  p0.json  playlist1.json
music_player/playlists/Japanese/: Japanese Privatussy.json  Japanese Public.json  playlist2.json  playlist3.json
music_player/scripts/: create_tables.sql  populate_downloaded_playlist.py
music_player/src/music_player/: album.py  common.py  common_gui.py  constants.py  database.py  db_types.py  downloader.py  library.py  main_window.py  music_importer.py  player.py  playlist.py  playlist_tree.py  queue_gui.py  signals.py  spotlistr-exported-playlist.csv  stylesheet.py  toolbar.py  user.py  utils.py  view_types.py  vlc_core.py
typings/vlc/: __init__.pyi
