[project]
name = "MusicDownloader"
version = "0.1.0"
description = "Add your description here"  # TODO
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dacite>=1.9.2",
    "mutagen>=1.47.0",
    "numpy>=2.2.5",
    "pyright>=1.1.400",
    "pyside6>=6.9.0",
    "python-vlc>=3.0.21203",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
]
